# TuxRup

./: .gitignore  README.md  TODO.md  all_css.css  exercises_to_understand_code.md
evaluation_applications/: .gitattributes  gtk-clock.c  test-app
evaluation_applications/clock/: Makefile  clock  clock_test.c  gtk-clock.c  tuxrup_edit.c  tuxrup_modified.c
evaluation_applications/fake_gimp/: Makefile  fakegimp.c  fg  globals.c  globals.h  image_tools.h  image_viewer.c  image_viewer.h  layers.c  layers.h  message.txt  toolbar.c  toolbar.h  toolpicker.c  toolpicker.h  tuxrup_edit.c  tuxrup_modified.c
evaluation_applications/fake_gimp/chatstuff/: fakegimp.c  image_viewer.c  layers.c  tuxrup_edit.c
evaluation_applications/fake_gimp/example/: C1_expanded.c  DocumentC1.c  document_B.c  original_document.c
evaluation_applications/overwrites/: Makefile  ow  ow.c
gtk_program_src/: Makefile  example_css.css  hello_world.c  hello_world_callback.c  hello_world_click_callback_modified.c  hw  hw.debug  hw3  hw_stripped  modified_fun.c  stuff.c  tags
tests/: Makefile  new_window.c  nw
tests/test1/: Makefile  fake_test.c  test1  test1.c  test1.css  testing_value
tuxrup/: CMakeLists.txt
tuxrup/documentation/: 0 Crash course and exercises in C programming.md  1 General explanation of Tuxrup principles and structure.md  2 On C project structure and how to compile Tuxrup.md  3 Exercises to get into and understand codebase.md  On C project structure and how to compile Tuxrup.md  forklaring.md  getting debug information and source code.md
tuxrup/learning_c_stuff/: globals.c  globals.h  main.c  my_program
tuxrup/src/: Makefile  callback_information.c  callback_information.h  callback_map.c  callback_map.h  compute_widget_hash.c  compute_widget_hash.h  context_menu.c  context_menu.h  css_utils.c  document_parsing.c  document_parsing.h  document_parsing_and_generation.c  document_parsing_and_generation.h  edit_callbacks_window.c  edit_callbacks_window.h  edit_css_window.c  edit_css_window.h  edit_properties_window.h  fix_function_body.c  fix_function_body.h  function_dispatcher.c  function_dispatcher.h  globals.c  globals.h  gtk_append_methods.txt  gtk_events.c  gtk_events.h  hashing.c  hashing.h  intercept_gtk_functions.c  modified_document_generation.c  modified_document_generation.h  modify_callback.c  modify_callback.h  pointer_name_conversion.c  pointer_name_conversion.h  reference_type.h  tags  temp.c  (+4 more)
tuxrup/src/css/: css_utils.c  css_utils.h  editor.c  editor.h  intercept_gtk_functions.c  style.css
tuxrup/src/editing_callbacks/: document_parsing.c  document_parsing.h  edit_callbacks_window.c  edit_callbacks_window.h  fix_function_body.c  fix_function_body.h  reference_type.h
tuxrup/src/editing_css/: css_utils.c  css_utils.h  edit_css_window.c  edit_css_window.h
tuxrup/src/editing_properties/: edit_properties_window.c
tuxrup/src/method_intercepting/: events_util.c  events_util.h  gtk_events.c  gtk_events.h  hooks.c  hooks.h  overrides.c  overrides.h
tuxrup/src/right_click/: context_menu.c  context_menu.h
tuxrup/src/utilities/: hashing.c  hashing.h  pointer_name_conversion.c  pointer_name_conversion.h  util.c  util.h
tuxrup/tempplates/: empty_modified_callback.c
tuxrup2/: exercies_to_understand_code.md
tuxrup2/src/: callbacks.c  callbacks.h  css.c  css.h  exercises.md  globals.c  globals.h  io.c  io.h  main.c  properties.c  properties.h  symbols.c  symbols.h  tags  tests.h  util.c  util.h
